--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "framer-motion": "^12.23.24",
     "front-matter": "^4.0.2",
     "gray-matter": "^4.0.3",
+    "lucide-react": "^0.555.0",
     "marked": "^17.0.1",
     "process": "^0.11.10",
     "react-helmet": "^6.1.0",
