Big structure edits

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
+    "sitemap": "node scripts/generate-sitemap.mjs",
     "test:visual": "node ./scripts/visual-smoke-test.js"
   },
   "keywords": [],
