--- a/vercel.json
+++ b/vercel.json
@@ -309,4 +309,15 @@
   "rewrites": [
     { "source": "/(.*)", "destination": "/index.html" }
   ]
+}{
+  "headers": [
+    {
+      "source": "/blog/iframe-tabs-app-for-facebook-brand-pages",
+      "headers": [{ "key": "X-Robots-Tag", "value": "noindex, nofollow" }]
+    },
+    {
+      "source": "/blog/iframe-tabs-app-for-facebook-brand-pages/",
+      "headers": [{ "key": "X-Robots-Tag", "value": "noindex, nofollow" }]
+    }
+  ]
 }
